CSS refactor: Fix duplicated & outdate px across light/dark modes
Do not place px in light or dark mode css instead use the shared
cool.css :root for that
- This avoid outdated values in the future
  - There was already one like that: --annotation-input-size
  had different values between light and dark mode

--- a/browser/css/cool.css
+++ b/browser/css/cool.css
@@ -14,6 +14,17 @@
 	--cell-cursor-selection-border-color: var(--color-primary);
 
 	--btn-size: 24px;
+	--border-radius: 4px; /* buttons, widgets */
+	--border-radius-large: 10px; /* dialog */
+
+	--default-font-size: 12px;
+	--header-font-size: 16px;
+
+	--default-height: 24px;
+	--header-height: 38px;
+
+	/* Annotations */
+	--annotation-input-size: 100px;
 }
 
 .access-key {
